# tour_agent

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  tui.py
.claude/: settings.json
alembic/versions/: a1f3c8e92d4b_add_metadata_and_phase_to_chat_message.py
app/: main.py
app/api/v1/: api.py  auth.py  chatbot.py  trip.py
app/core/: config.py  logging.py  observability.py
app/core/agent/: __init__.py  agent.py  builder.py  gatherer.py  loop.py  orchestrator.py  planner.py  router.py  state.py
app/core/agent/executors/: __init__.py  arrange.py  base.py  confirm.py  gathering.py  group_days.py  select_pois.py
app/core/prompts/: agent_system.md  arrange.md  gatherer.md  group.md  planner.md  recommend.md
app/core/tools/: __init__.py  arrange_schedule.py  ask_user.py  base.py  map.py  memory_search.py  poi.py  present_groups.py  recommend_pois.py  save_trip_interactive.py  search.py  trip.py  weather.py
app/models/: database.py  message.py  session.py  trip.py
app/schemas/: __init__.py  builder.py  chat.py  gatherer.py  trip.py
app/services/: database.py  memory.py  session_naming.py  trip.py
app/services/llm/: registry.py  service.py
app/utils/: geo.py  graph.py
docs/: Rutugo.md  skeleton_decision.md  techstack_decision.md
frontend/: DESIGN.md  package.json  pnpm-lock.yaml
frontend/.claude/: settings.local.json
frontend/.claude/skills/ui-ux-pro-max/: SKILL.md
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(main)/: layout.tsx  page.tsx
frontend/src/app/(main)/trip/[id]/: page.tsx
frontend/src/components/: phase-indicator.tsx  sidebar.tsx  skeleton-loader.tsx  theme-toggle.tsx
frontend/src/components/builder/: builder-panel.tsx  confirm-panel.tsx  day-group.tsx  poi-card.tsx  select-pois.tsx  timeline.tsx
frontend/src/components/chat/: chat-input.tsx  message-bubble.tsx  typing-indicator.tsx
frontend/src/components/gathering/: question-card.tsx
frontend/src/lib/: api.ts  poi-utils.ts  sse.ts  types.ts
frontend/src/stores/: auth.ts  chat.ts  session.ts
scripts/: export_openapi.py
