[project]
name = "tour-agent"
version = "0.1.0"
description = "AI-powered travel itinerary planning agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.121.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "asgi-correlation-id>=4.3.4",

    # LLM (OpenAI-compatible protocol for MiMo/DeepSeek/Qwen)
    "openai>=1.82.0",
    "langfuse==3.9.1",

    # Database
    "sqlmodel>=0.0.25",
    "psycopg[binary]>=3.3.2",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.18.4",
    "pgvector>=0.3.6",

    # Auth
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.3.0",
    "python-jose[cryptography]>=3.4.0",
    "email-validator>=2.2.0",

    # HTTP client (external API calls)
    "httpx>=0.28.1",

    # Search
    "tavily-python>=0.5.0",

    # Observability
    "structlog>=25.2.0",
    "prometheus-client>=0.19.0",
    "starlette-prometheus>=0.7.0",

    # Utils
    "pydantic[email]>=2.11.1",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "tenacity>=9.1.2",
    "uvloop>=0.22.1; platform_system != 'Windows'",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyinstrument>=5.1.2",
]
cache = [
    "redis>=7.4.0",
    "valkey[libvalkey]>=6.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.390",
    "ruff>=0.11.4",
]
test = ["httpx>=0.28.1", "pytest>=8.3.5", "pytest-asyncio>=0.26.0"]


[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 119
exclude = ["migrations", "*.ipynb", "venv"]

[tool.ruff.lint]
select = ["E", "F", "B", "ERA", "D"]
ignore = ["E501", "D203", "D213", "B904", "B008"]
unfixable = ["B"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.pyright]
include = ["app", "evals"]
exclude = [
    "**/__pycache__",
    "**/.venv",
    "alembic/versions",
    "migrations",
    "venv",
]
stubPath = "typings"
pythonVersion = "3.11"
typeCheckingMode = "standard"

reportDuplicateImport = "error"
reportInvalidTypeVarUse = "error"
reportSelfClsParameterName = "error"
reportImplicitOverride = "warning"
